Update WebSecurityConfig to use Properties class
The WebSecurityConfig was updated to utilize the Properties class and the @ConfigurationProperties annotation to configure the WebSecurity settings. This change replaces the use of @Value annotation and allows for a more structured and type-safe configuration. The corsConfigurationSource method was also updated to only allow POST methods.